Added background colors

--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,13 @@ body {
   display: flex;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh; 
+  min-height: 100vh;
 }
 
 th {
   width: 120px;
-  padding-top:25px;
-  padding-bottom:30px;
+  padding-top: 25px;
+  padding-bottom: 30px;
 }
 
 td {
@@ -18,4 +18,25 @@ td {
 
 .time {
   height: 40px;
+}
+
+.pink {
+  background-color: #f06292; /* Vibrant Pink */
+  padding: 10px 15px;
+  min-height: 50px;
+  width: auto; /* Makes the background fit content */
+}
+
+.blue {
+  background-color: #42a5f5; /* Vibrant Blue */
+  padding: 10px 15px;
+  min-height: 50px;
+  width: auto;
+}
+
+.green {
+  background-color: #66bb6a; /* Vibrant Green */
+  padding: 10px 15px;
+  min-height: 50px;
+  width: auto;
 }
